--- a/Modern-Portfolio/index.html
+++ b/Modern-Portfolio/index.html
@@ -263,6 +263,32 @@
                     </div>
                 </div>
             </div>
+            <!-- Education Section -->
+<section id="education" class="py-20 bg-dark">
+    <div class="container mx-auto px-6">
+        <div class="text-center mb-16">
+            <h2 class="text-3xl md:text-4xl font-bold mb-4">Education <span class="gradient-text">Details</span></h2>
+            <div class="w-20 h-1 bg-gradient-to-r from-primary to-secondary mx-auto"></div>
+        </div>
+        <div class="max-w-3xl mx-auto space-y-8">
+            <div class="bg-slate-800 rounded-lg p-6 shadow-xl">
+                <h3 class="text-xl font-bold mb-2">Bachelor of Technology - Applied Electronics & Instrumentation Engineering </h3>
+                <p class="text-slate-400 mb-2">Heritage Institute Of Technology, 2019 – 2022, CGPA = 7.90</p>
+                <p class="text-slate-300">I graduated with a degree in Applied Electronics & Instrumentation Engineering, where I built a strong foundation in electronics, instrumentation systems, control engineering, and automation. My coursework and projects provided hands-on experience with sensors, embedded systems, and industrial automation technologies, preparing me for problem-solving and innovation in modern engineering environments.</p>
+            </div>
+            <div class="bg-slate-800 rounded-lg p-6 shadow-xl">
+                <h3 class="text-xl font-bold mb-2">Diploma Engineering - Electronics & Instremnetation Engineering</h3>
+                <p class="text-slate-400 mb-2">Murshidabad Institute Of Technology, 2016 – 2019, CGPA = 8.01</p>
+                <p class="text-slate-300">I completed my Diploma in Applied Electronics & Instrumentation Engineering, gaining practical knowledge in electronic circuits, instrumentation systems, and automation processes. This program equipped me with hands-on skills in using modern tools and technologies for measurement, control, and industrial applications, laying a strong foundation for my continued growth in engineering and backend development</p>
+            </div>
+            <div class="bg-slate-800 rounded-lg p-6 shadow-xl">
+                <h3 class="text-xl font-bold mb-2">Secondary Education</h3>
+                <p class="text-slate-400 mb-2">Maindranagar High School, 2015-2016, Percantage = 68.14% </p>
+                <p class="text-slate-300"></p>
+            </div>
+        </div>
+    </div>
+</section>
             
             <!-- Experience Timeline -->
             <div class="mt-20">
@@ -674,10 +700,10 @@
                             <span class="px-3 py-1 bg-slate-700 rounded-full text-sm">JavaScript</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="#" class="text-primary hover:text-secondary">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            <a href="https://souvikportofolio.netlify.app/" class="text-primary hover:text-secondary">
+                                <i class="fas fa-external-link-alt"></i> Live Demos
                             </a>
-                            <a href="#" class="text-primary hover:text-secondary">
+                            <a href="https://github.com/sdas2508/Souvik_Portofolio/tree/main/Modern-Portfolio" class="text-primary hover:text-secondary">
                                 <i class="fab fa-github"></i> Code
                             </a>
                         </div>
