Update Secondary Education

--- a/Modern-Portfolio/index.html
+++ b/Modern-Portfolio/index.html
@@ -277,14 +277,9 @@
                 <p class="text-slate-300">I graduated with a degree in Applied Electronics & Instrumentation Engineering, where I built a strong foundation in electronics, instrumentation systems, control engineering, and automation. My coursework and projects provided hands-on experience with sensors, embedded systems, and industrial automation technologies, preparing me for problem-solving and innovation in modern engineering environments.</p>
             </div>
             <div class="bg-slate-800 rounded-lg p-6 shadow-xl">
-                <h3 class="text-xl font-bold mb-2">Diploma Engineering - Electronics & Instremnetation Engineering</h3>
+                <h3 class="text-xl font-bold mb-2">Diploma Engineering - Electronics & Instrementation Engineering</h3>
                 <p class="text-slate-400 mb-2">Murshidabad Institute Of Technology, 2016 – 2019, CGPA = 8.01</p>
                 <p class="text-slate-300">I completed my Diploma in Applied Electronics & Instrumentation Engineering, gaining practical knowledge in electronic circuits, instrumentation systems, and automation processes. This program equipped me with hands-on skills in using modern tools and technologies for measurement, control, and industrial applications, laying a strong foundation for my continued growth in engineering and backend development</p>
-            </div>
-            <div class="bg-slate-800 rounded-lg p-6 shadow-xl">
-                <h3 class="text-xl font-bold mb-2">Secondary Education</h3>
-                <p class="text-slate-400 mb-2">Maindranagar High School, 2015-2016, Percantage = 68.14% </p>
-                <p class="text-slate-300"></p>
             </div>
         </div>
     </div>
